# ChangeLog for xfce-base/xfce4-settings
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*xfce4-settings-4.5.92 (14 Nov 2008)

  14 Nov 2008; Christoph Mende <angelos@gentoo.org>
  +xfce4-settings-4.5.92.ebuild:
  Xfce-4.6 Beta 2 bump

  10 Nov 2008; Christoph Mende <angelos@gentoo.org> metadata.xml,
  xfce4-settings-9999.ebuild:
  Add USE=keyboard for libxklavier

  10 Nov 2008; Christoph Mende <angelos@gentoo.org> metadata.xml,
  xfce4-settings-9999.ebuild:
  Add USE=sound for libcanberra

  09 Nov 2008; Christoph Mende <angelos@gentoo.org>
  xfce4-settings-9999.ebuild:
  Fix dependencies

  29 Oct 2008; Christoph Mende <angelos@gentoo.org>
  xfce4-settings-9999.ebuild:
  Added a blocker against old MCS

  16 Sep 2008; Christoph Mende <angelos@gentoo.org>
  xfce4-settings-9999.ebuild:
  Updated dependencies

  08 Sep 2008; Christoph Mende <angelos@gentoo.org>
  xfce4-settings-9999.ebuild:
  Removed --enable-xf86misc and fixed Xfce4 dependencies

  31 Jul 2008; Christoph Mende <angelos@gentoo.org>
  xfce4-settings-9999.ebuild:
  Updated dependencies, removed hal

  18 Jul 2008; Christoph Mende <angelos@gentoo.org>
  xfce4-settings-9999.ebuild:
  Added missing intltool dependency

  14 Jul 2008; Christoph Mende <angelos@gentoo.org>
  xfce4-settings-9999.ebuild:
  Added hal and libnotify USE flags

  28 Jun 2008; Christoph Mende <angelos@gentoo.org>
  xfce4-settings-9999.ebuild:
  Synced keywords with xfce-base/xfce4

  23 Jun 2008; Christoph Mende <angelos@gentoo.org>
  +xfce4-settings-9999.ebuild:
  Initial import
